overflow fixed

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -4,6 +4,9 @@
   padding: 0;
   margin: 0;
 }
+body {
+  overflow-x: hidden;
+}
 .ParticleBackground {
   height: 100vh;
 }
